<resources>
    <string name="app_name">MyBike</string>
    <string name="user_registration">User Registration</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="note">Note: Minimum password length should be 8 characters.</string>
    <string name="mobile">Mobile</string>
    <string name="terms">I have read all the terms and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_page">Login Page</string>
    <string name="password_login">Password:</string>
    <string name="signup_text">Don\'t have an account? Sign Up</string>
    <string name="email_text">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="choose_your_bicycle">Choose Your Bicycle</string>
    <string name="logout">Logout</string>
    <string name="proceed">proceed</string>
    <string name="login">Login</string>
    <string name="please_select_your_location">Please Select Your Location</string>
    <string name="booking_details">Booking Details</string>
    <string name="book">Book</string>
    <string name="select_bicycle">Select Bicycle:</string>
</resources>