<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backimage"
        tools:context=".MainActivity"
        android:padding="20dp"
        >
        <ImageView
            android:id="@+id/cyclelogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_cycle_logo"
            />
        <TextView
            android:id="@+id/loginpgheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_page"
            android:layout_marginTop="40dp"
            android:textSize="28sp"
            android:textColor="#00214d"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cyclelogo" />
        <TextView
            android:id="@+id/loginidtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loginpgheading"
            android:text="Login ID: "
            android:textSize="25sp"
            android:textColor="#00214d"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/loginidet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginidtv"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/passtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_login"
            app:layout_constraintTop_toBottomOf="@id/loginidet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            android:textColor="#00214d"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/passet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passtv"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passet"
            android:layout_marginTop="20dp"
            android:text="@string/signup_text"
            android:textSize="15sp"
            android:id="@+id/signup"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            android:id="@+id/login_button"
            android:text="@string/login"
            android:clickable="true"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>